<package>
  <name>staubli_val3_driver</name>
  <version>0.1.0</version>
  <description>
   <p>
     ROS-Industrial nodes for interfacing with Staubli robot controllers.
   </p>
   <p>
     This package is part of the ROS-Industrial program and contains nodes
     for interfacing with Staubli industrial robot controllers that support
     the VAL3 programming environment.
   </p>
  </description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2.0</license>

  <url type="website">http://ros.org/wiki/staubli_val3_driver</url>
  <url type="bugtracker">https://github.com/ros-industrial/staubli/issues</url>
  <url type="repository">https://github.com/ros-industrial/staubli</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>industrial_robot_client</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>industrial_robot_client</run_depend>
</package>
